Fix scrollbar appear

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
     @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
     @import url('https://fonts.googleapis.com/css2?family=ABeeZee&display=swap');
+    * {
+        /* outline: 1px solid red;*/
+    }
+    
     body {
-        width: 100vw;
+        /*width: 100vw;*/
         height: 100vh;
         background-color: lightgray;
         font-family: 'ABeeZee', sans-serif;
